<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="389dp"
        android:layout_height="853dp"
        tools:layout_editor_absoluteX="2dp"
        tools:layout_editor_absoluteY="0dp">


        <TextView
            android:id="@+id/edr1"
            android:layout_width="321dp"
            android:layout_height="42dp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/quicksand_bold"
            android:text="@string/UPDATESOLAR"
            android:textColor="@color/black"
            android:textSize="28dp"
            app:layout_constraintBottom_toTopOf="@+id/qasw3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.632"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.181" />

        <TextView
            android:id="@+id/qasw3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/quicksand_regular"
            android:text="@string/ADDIMAGE"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/ghy6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.089"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/qazxcv4"
            android:layout_width="350dp"
            android:layout_height="40dp"
            android:layout_marginBottom="28dp"
            android:background="@drawable/custominput"
            android:ems="10"
            android:inputType="textPersonName"
            android:paddingStart="15dp"
            android:textSize="16dp"
            app:layout_constraintBottom_toTopOf="@+id/qwedsa3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.641"
            app:layout_constraintStart_toStartOf="parent"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:fontFamily="@font/quicksand_regular"
            android:hint= "Update product price"/>

        <TextView
            android:id="@+id/cvbnhj"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/quicksand_regular"
            android:text="@string/PRICE"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/qazxcv4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.072"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/qazxv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/quicksand_regular"
            android:text="@string/WARRENTY"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/edfghj"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.082"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/vbnh7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/quicksand_regular"
            android:text="@string/WATTAGE"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/jnbg6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.08"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/rhjui8"
            android:layout_width="350dp"
            android:layout_height="40dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/custominput"
            android:ems="10"
            android:inputType="textPersonName"
            android:paddingStart="15dp"
            android:textSize="16dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/vbnh7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.641"
            app:layout_constraintStart_toStartOf="parent"
            android:fontFamily="@font/quicksand_regular"
            android:textColor="@color/black"
            android:hint="Update model name"/>

        <TextView
            android:id="@+id/edfgt5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/quicksand_regular"
            android:text="@string/MODELNAME"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/rhjui8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.092"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/rfgt6"
            android:layout_width="350dp"
            android:layout_height="40dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/custominput"
            android:drawablePadding="12dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:paddingStart="15dp"
            android:textSize="16dp"
            app:layout_constraintBottom_toTopOf="@+id/edfgt5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.589"
            app:layout_constraintStart_toStartOf="parent"
            android:fontFamily="@font/quicksand_regular"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:hint="Update product name"/>

        <TextView
            android:id="@+id/edfr5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/quicksand_regular"
            android:text="@string/PRODUCTNAME"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/rfgt6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.097"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/jnbg6"
            android:layout_width="350dp"
            android:layout_height="40dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/custominput"
            android:ems="10"
            android:inputType="textPersonName"
            android:paddingStart="15dp"
            android:textSize="16dp"
            app:layout_constraintBottom_toTopOf="@+id/qazxv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.641"
            app:layout_constraintStart_toStartOf="parent"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:fontFamily="@font/quicksand_regular"
            android:hint="Update product wattage"/>

        <Button
            android:id="@+id/qwedsa3"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginEnd="52dp"
            android:layout_marginBottom="44dp"
            android:fontFamily="@font/quicksand_bold"
            android:text="@string/CANCEL"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textAllCaps="false"
            android:background="@drawable/btnaddcancel"
            android:textSize="18dp"/>

        <RadioGroup
            android:id="@+id/edfghj"
            android:layout_width="213dp"
            android:layout_height="63dp"
            android:layout_marginEnd="116dp"
            android:layout_marginBottom="12dp"
            app:layout_constraintBottom_toTopOf="@+id/cvbnhj"
            app:layout_constraintEnd_toEndOf="parent">

            <RadioButton
                android:id="@+id/dcvfg6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand_regular"
                android:text="10 Years"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/fvbghy6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand_regular"
                android:text="20 Years"
                android:textColor="@color/black"
                android:textStyle="bold" />
        </RadioGroup>

        <ImageView
            android:id="@+id/sdcf4"
            android:layout_width="69dp"
            android:layout_height="60dp"
            android:layout_marginStart="36dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toTopOf="@+id/edfr5"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/addimage"
            />

        <ImageView
            android:id="@+id/edfr4"
            android:layout_width="69dp"
            android:layout_height="60dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toTopOf="@+id/edfr5"
            app:layout_constraintEnd_toStartOf="@+id/edfr"
            app:layout_constraintHorizontal_bias="0.555"
            app:layout_constraintStart_toEndOf="@+id/sdcf4"
            app:srcCompat="@drawable/addimage" />

        <ImageView
            android:id="@+id/edfr"
            android:layout_width="69dp"
            android:layout_height="60dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toTopOf="@+id/edfr5"
            app:layout_constraintEnd_toStartOf="@+id/ghy6"
            app:srcCompat="@drawable/addimage" />

        <ImageView
            android:id="@+id/ghy6"
            android:layout_width="69dp"
            android:layout_height="60dp"
            android:layout_marginEnd="36dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toTopOf="@+id/edfr5"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/addimage" />

        <Button
            android:id="@+id/fvghy6"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginBottom="44dp"
            android:background="@drawable/btnaddcancel"
            android:fontFamily="@font/quicksand_bold"
            android:text="@string/UPDATE"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/qwedsa3"
            app:layout_constraintHorizontal_bias="0.437"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>